# cuda_study

./: CMakeLists.txt  main.cpp
cuda/: CMakeLists.txt  cudaMath.h  cudaUtility.h  cudaYUV.h  yuv_nv12.cu  yuv_yv12.cu
cuda_lib/: CMakeLists.txt  common.h  commonFunction.cu
cuda_test/: test1.cpp
